Implemented calculating azimuth based on location - not tested